@@ -1,3 +1,8 @@
+2007-09-09  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclCompCmds.c (TclCompilePowOpCmd):	Make a separate
+	routine to compile ** to account for its different associativity.
+
 2007-09-08  Miguel Sofer  <msofer@users.sf.net>
 
 	* generic/tclVar.c (Tcl_SetVar2, TclPtrSetVar): [Bug 1710710]
